# Amazon-Ads-Audit-Report-Tool

./: .vercelignore  README.md  amazon_ads_audit.py  app.py  pyproject.toml  requirements.txt  run_web.bat  web_app.py
templates/: index.html
